# Microservicios

./: .dockerignore  .gitignore  APIs.md  README.md  ariquitectura_por_eventos.md  docker-compose.yml  init-db.sql
api-gateway/: dockerfile  main.py  pyproject.toml
api-gateway/core/: middleware.py
api-gateway/proxies/: auth_proxy.py  payments_proxy.py  transactions_proxy.py  wallet_proxy.py
auth-service/: README.md  auth-service.md  dockerfile  pyproject.toml  readme.md
auth-service/app/: main.py
auth-service/app/core/: config.py  security.py
auth-service/app/db/: connection.py
auth-service/app/models/: pending_events.py  user_model.py
auth-service/app/routes/: auth_routes.py
auth-service/app/services/: events.py  publisher.py
auth-service/task/: celery.py  resend_pending.py  schedule.py
auth-service/test/login/: test_login_event_fail.py  test_login_event_wallet.py  test_login_invalid.py  test_login_jwt.py  test_login_valid.py  test_worker_resend_event.py
auth-service/test/register/: test_register_event_fail.py  test_register_unit.py  test_register_user_exists.py
auth-service/test/token/: test_token_refresh_invalid.py  test_token_refresh_valid.py
auth-service/test/worker/: test_resend_pending_events.py
payment-service/: Dockerfile  celery.py  main.py  pyproject.toml
payment-service/db/: mongo.py  schemas.py
payment-service/routers/: payments.py
payment-service/services/: rabbitmq.py
payment-service/task/: resend_failed_payments.py  schedule.py
transactions-service/: MIGRATION_AND_NEXT_STEPS.md  dockerfile  main.py  manage.py  pyproject.toml
transactions-service/transactions/: admin.py  api.py  models.py  schemas.py  tests.py
transactions-service/transactions/management/commands/: publish_outbox.py
transactions-service/transactions/migrations/: 0001_initial.py  0002_outbox.py
transactions-service/transactions_service/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
wallet-service/: dockerfile  manage.py  pyproject.toml  start.sh
wallet-service/wallet_service/: asgi.py  settings.py  urls.py  wsgi.py
wallet-service/wallets/: admin.py  models.py
wallet-service/wallets/apis/: serializets.py  views.py
wallet-service/wallets/migrations/: 0001_initial.py
wallet-service/wallets/services/: consumer.py  payment_consumer.py
