[project]
name = "transactions_service"
version = "0.1.0"
description = "servicio de transferencias"
authors = [
    {name = "Tu Nombre",email = "vaglimatias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "django-ninja (>=1.4.5,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
